# DocBuilder

./: .gitignore  RAG.py  agent.py  api.py  build_todo.py  doc_builder.py  doc_tools.py  example_prompts.xlsx  frontend.py  main.py  pyproject.toml  requirements.txt  utils.py  vec_search.py
py_client/: agent.py  api_client.py
