[project]
name = "docbuilder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.139.0",
    "huggingface-hub>=1.22.0",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.8",
    "numpy>=2.5.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "python-docx>=1.2.0",
]
